# BinaryFileUtils

./: CMakeLists.txt  README.md
include/: BinUtils.h  Main.h
src/: BinUtils.cpp  Main.cpp
